<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Stats</string>
    <string name="action_settings">Settings</string>
    <string name="gps_button_text">GPS</string>
    <string name="wifi_button_text">Wifi</string>
    <string name="cell_button_text">Cell</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="defaultFirstLock">0.0.0s</string>
    <string name="defaultBatteryChange">0%</string>
    <string name="defaultUpdates">0</string>
    <string name="defaultTimeRunning">0:0:0</string>
    <string name="time_on_gps">Time on GPS:</string>
    <string name="time_till_first_lock">Time till first lock:</string>
    <string name="battery_loss">Battery Loss:</string>
    <string name="updates">"Updates: "</string>
    <string name="time_on_cell">Time on Cell:</string>
    <string name="time_on_wifi">"Time on Wifi: "</string>
    <string name="latitude_value">0</string>
    <string name="longitude_value">0</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude</string>
    <string name="run_test">Run Test</string>
    <string name="minutes_till_completion">Minutes till completion</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_on_acc">Time on Acc:</string>
    <string name="velocity">Velocity</string>
    <!-- Mapping Features -->
    <string name="send_location">S E N D</string>
    <string name="algorithm">A L G O R I T H M</string>
    <string name="API">A P I</string>
    <string name="str_btn_find_location">F</string>
    <string name="hnt_et_location">Enter location</string>
    <string name="title_activity_map_mssg">MapMssgActivity</string>
    <string-array name="building_arrays">
        <item>1：</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="building_prompt">Choose a Building</string>
    <string-array name="mode_arrays">
        <item>Driving</item>
        <item>Walking</item>
    </string-array>
    <string name="mode_prompt">Choose a Building</string>
</resources>
