<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignRight="@+id/gpsTimeTextView"
        android:text="@string/defaultTimeRunning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignRight="@+id/wifiTimeTextView"
        android:text="@string/latitude_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignRight="@+id/latitudeTextView"
        android:text="@string/longitude_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView16"
        android:text="@string/run_test" />

    <EditText
        android:id="@+id/timeToRunTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/test_button"
        android:layout_toLeftOf="@+id/toggleButton1"
        android:layout_toRightOf="@+id/test_button"
        android:ems="10"
        android:hint="@string/minutes_till_completion"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cell_button"
        android:layout_alignParentTop="true"
        android:text="@string/time_on_gps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView7"
        android:text="@string/time_till_first_lock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/battery_loss"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:text="@string/updates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gpsTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:text="@string/defaultTimeRunning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gpsFirstLockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:text="@string/defaultFirstLock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gpsBatteryLossTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:text="@string/defaultBatteryChange"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gpsUpdatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignParentRight="true"
        android:text="@string/defaultUpdates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/time_on_cell"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:text="@string/time_till_first_lock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/cellFirstLockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView12"
        android:text="@string/defaultFirstLock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView10"
        android:text="@string/time_on_wifi"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView9"
        android:text="@string/time_till_first_lock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView19"
        android:text="@string/battery_loss"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView20"
        android:text="@string/updates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/wifiFirstLockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/wifiTimeTextView"
        android:text="@string/defaultFirstLock"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/wifiBatteryLossTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/wifiFirstLockTextView"
        android:text="@string/defaultBatteryChange"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cell_button"
        android:layout_alignLeft="@+id/cell_button"
        android:layout_marginBottom="14dp"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/wifiTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView19"
        android:layout_alignRight="@+id/cellFirstLockTextView"
        android:text="@string/defaultTimeRunning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/acc_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:text="Time on Acc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/velocity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:text="Velocity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/velocityMag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/latitudeTextView"
        android:layout_below="@+id/acc_baterry_lost"
        android:text="@string/defaultUpdates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/gps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_button"
        android:layout_alignRight="@+id/textView8"
        android:layout_toRightOf="@+id/cell_button"
        android:textOff="@string/gps_button_text"
        android:textOn="@string/gps_button_text" />

    <ToggleButton
        android:id="@+id/accelerometer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_button"
        android:layout_toRightOf="@+id/gps_button"
        android:textOff="Acc"
        android:textOn="Acc" />

    <ToggleButton
        android:id="@+id/wifi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_button"
        android:layout_toRightOf="@+id/accelerometer_button"
        android:textOff="@string/wifi_button_text"
        android:textOn="@string/wifi_button_text" />

    <Button
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wifi_button"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/wifi_button"
        android:background="@drawable/graph_button"
        android:onClick="drawGraph" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView15"
        android:layout_below="@+id/acc_time_text"
        android:text="@string/battery_loss"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_baterry_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/velocityMag"
        android:layout_below="@+id/acc_time_text"
        android:text="@string/defaultBatteryChange"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/time_on_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acc_baterry_lost"
        android:layout_alignRight="@+id/acc_baterry_lost"
        android:text="@string/defaultTimeRunning"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/wifiUpdatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/wifiBatteryLossTextView"
        android:text="@string/defaultUpdates"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/cell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/graph"
        android:layout_alignBottom="@+id/graph"
        android:textOff="@string/cell_button_text"
        android:textOn="@string/cell_button_text" />

    <ToggleButton
        android:id="@+id/algorithm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timeToRunTextField"
        android:layout_alignBottom="@+id/timeToRunTextField"
        android:layout_alignRight="@+id/graph"
        android:textOff="Al"
        android:textOn="Al" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/acc_time_text"
        android:layout_toRightOf="@+id/textView9"
        android:text="MAP"
        android:onClick="mapGraph" />

</RelativeLayout>