<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <fragment
        android:id="@+id/map"
        android:name="com.research.tools.MapMssgActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/take_picture"
        android:layout_alignParentTop="true"
        class="com.google.android.gms.maps.MapFragment" />

    <Button
        android:id="@+id/algorithm_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#E6E6FA"
        android:ems="10"
        android:hint="@string/algorithm"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_alignBaseline="@+id/btn_find_location"
        android:layout_alignBottom="@+id/btn_find_location"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/hnt_et_location"
        android:inputType="text"
        android:background="#FFFFFF"
        android:textStyle="bold"
        android:visibility="gone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_find_location"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/et_location"
        android:background="@drawable/find_location"
        android:visibility="gone"/>
    <Button
        android:id="@+id/get_current_location"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/et_location"
        android:background="@drawable/current_location"
        android:visibility="gone" />

    <Button
        android:id="@+id/api_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#E6E6FA"
        android:ems="10"
        android:hint="@string/API"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="G O" />

    <Spinner
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/api_button"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/go_button"
        android:entries="@array/mode_arrays"
        android:prompt="@string/mode_prompt" />

    <Spinner
        android:id="@+id/building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/mode"
        android:entries="@array/building_arrays"
        android:prompt="@string/building_prompt" />

        "

</RelativeLayout>